--- a/app/components/records/records.scss
+++ b/app/components/records/records.scss
@@ -106,5 +106,27 @@
         }
       }
     }
+
+    &_mt30 {
+      &:not(:first-child) {
+        margin-top: 30px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(30, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(30, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(30, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(30, 375);
+        }
+      }
+    }
   }
 }
