--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -31,22 +31,22 @@ block content
         +b.sitemap
           +e.group#nav-edit-space.nd-hide
             +e.head
-              +page-title Страницы Host Account - Edit Space
+              +page-title Страницы Host Account - Edit Space (only HD breakpoint)
             +e.list
               +nd-link(href="ha-edit-space.html") Spacepool - Edit Space - Location (ha-edit-space.html)
           +e.group#nav-ha-space.nd-hide
             +e.head
-              +page-title Страницы Host Account - Single Space
+              +page-title Страницы Host Account - Single Space (only HD breakpoint)
             +e.list
               +nd-link(href="ha-space.html") Spacepool - Host Space - Dashboard (ha-space.html)
           +e.group#nav-ha
             +e.head
-              +page-title Страницы Host Account
+              +page-title Страницы Host Account (only HD breakpoint)
             +e.list
               +nd-link(href="host-account.html") Spacepool - Host Account - Spaces (host-account.html)
               +nd-link(href="host-account-messages.html") Spacepool - Host Account - Messages (host-account-messages.html)
-              //- +nd-link(href="host-account-managers.html") Spacepool - Host Account - Managers (host-account-managers.html)
-              //- +nd-link(href="host-account-managers-inactive.html") Spacepool - Host Account - Managers | Inactive (host-account-managers-inactive.html)
+              +nd-link(href="host-account-managers.html") Spacepool - Host Account - Managers (host-account-managers.html)
+              +nd-link(href="host-account-managers-inactive.html") Spacepool - Host Account - Managers | Inactive (host-account-managers-inactive.html)
               //- +nd-link(href="host-account-managers-invite.html") Spacepool - Host Account - Managers | Invite (host-account-managers-invite.html)
               //- +nd-link(href="host-account-managers-invite-success.html") Spacepool - Host Account - Managers | Invite Success(host-account-managers-invite-success.html)
               //- +nd-link(href="host-account-settings.html") Spacepool - Host Account - Settings (host-account-settings.html)
