--- a/app/blocks/switch/nd-switch.scss
+++ b/app/blocks/switch/nd-switch.scss
@@ -66,6 +66,28 @@
       }
     }
 
+    &_mr15 {
+      &:not(:last-child) {
+        margin-right: 15px;
+
+        @include screen('xlg', max, 2) {
+          margin-right: pxtovw(15, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-right: pxtovw(15, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-right: pxtovw(15, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-right: pxtovw(15, 375);
+        }
+      }
+    }
+
     &_mr18 {
       &:not(:last-child) {
         margin-right: 18px;
