--- a/app/pages/host-account/host-account-managers.pug
+++ b/app/pages/host-account/host-account-managers.pug
@@ -36,7 +36,9 @@ block content
             +e.menu
               +slider-navigation([{name: "All Managers", href: "host-account-managers.html"}, {name: "Free Managers", href: "#"}, {name: "Active Managers", href: "#"}, {name: "Inactive Managers", href: "host-account-managers-inactive.html"}], 0, 'All Managers')
               +nd-button('a')._pad10._h35.__add(href="host-account-managers-invite.html") Add manager
-          +records._acc
+          +records.__records
+            each item in getData('nd-managers.json').all
+              +manager-card(item).__item_mt30
 
 block panels
 
