--- a/app/blocks/filter-popup/filter-popup.pug
+++ b/app/blocks/filter-popup/filter-popup.pug
@@ -1,5 +1,5 @@
 mixin filter-popup(data)
-  +b.FORM.filter-popup&attributes(attributes)
+  +b.filter-popup&attributes(attributes)
     +e.header
       +e.close.nd-hide-from-sm.js-nd-filter-close
       +e.H4.title.nd-hide-from-sm!=data.title
