--- a/app/components/side-navigation/nd-side-navigation.scss
+++ b/app/components/side-navigation/nd-side-navigation.scss
@@ -368,6 +368,7 @@
     line-height: (19 / 16);
     font-weight: 400;
     margin-top: 74px;
+    width: 100%;
 
     @include screen('xlg', max, 2) {
       font-size: pxtovw(16, 1660);
