--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -21,6 +21,7 @@ $grid9-col-width: $grid-container-width / 9; // Ширина одной коло
 $breakpoints: ('xl': 1600px, 'lg': 1300px, 'bg': 1160px, 'md': 1020px, 'sm': 768px, 'xs': 480px);
 $color-warning: #000;
 $nd-breakpoints: ('xl': 1850px, 'xlg': 1660px, 'lg': 1400px, 'bg': 1160px, 'md': 1030px, 'sm': 768px, 'xs': 480px);
+$nd-breaksizes: ('xl': 1920, 'xlg': 1660, 'lg': 1366, 'md': 960, 'sm': 375);
 
 // ##########
 // Цвета
