--- a/app/blocks/section/nd-section.scss
+++ b/app/blocks/section/nd-section.scss
@@ -510,6 +510,35 @@
         }
       }
     }
+
+    &_white {
+      background-color: $nd-color-basic-light;
+    }
+  }
+
+  &__board {
+    background-color: $nd-color-basic-light;
+    padding: 50px 50px 60px;
+    box-sizing: border-box;
+    width: 100%;
+
+    @include rule(border-radius, (xl: 3px, xlg: 3, lg: 3, md: 3, sm: 3));
+
+    @include screen('xlg', max, 2) {
+      padding: pxtovw(50, 1660) pxtovw(50, 1660) pxtovw(60, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      padding: pxtovw(50, 1366) pxtovw(50, 1366) pxtovw(60, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding: pxtovw(50, 960) pxtovw(50, 960) pxtovw(60, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      padding: pxtovw(50, 375) pxtovw(50, 375) pxtovw(60, 375);
+    }
   }
 
   &__boxes {
