--- a/app/pages/host-account/host-account-managers-invite.pug
+++ b/app/pages/host-account/host-account-managers-invite.pug
@@ -37,6 +37,10 @@ block content
               +slider-navigation([{name: "All Managers", href: "host-account-managers.html"}, {name: "Free Managers", href: "#"}, {name: "Active Managers", href: "#"}, {name: "Inactive Managers", href: "host-account-managers-inactive.html"}], 0)
               +nd-button('a')._pad10._h35.__add.is-disabled(href="host-account-managers-invite.html") Add manager
 
+          +e.board
+            +e.column._divider
+            +e.column
+
 block panels
 
 block popups
