--- a/app/blocks/form-elements/nd-input.scss
+++ b/app/blocks/form-elements/nd-input.scss
@@ -83,6 +83,15 @@
     }
   }
 
+  &_copy {
+    @include rule(padding-right, (xl: 120px, xlg: 120, lg: 120, md: 120, sm: 120));
+
+    &::selection {
+      background: transparent;
+      color: currentColor;
+    }
+  }
+
   &:-ms-input-placeholder {
     color: transparent;
     font-weight: 400;
