--- a/app/pages/host-account/host-account-managers-invite-success.pug
+++ b/app/pages/host-account/host-account-managers-invite-success.pug
@@ -37,6 +37,22 @@ block content
               +slider-navigation([{name: "All Managers", href: "host-account-managers.html"}, {name: "Free Managers", href: "#"}, {name: "Active Managers", href: "#"}, {name: "Inactive Managers", href: "host-account-managers-inactive.html"}], 0)
               +nd-button('a')._pad10._h35.__add.is-disabled(href="host-account-managers-invite.html") Add manager
 
+          +e.board_pd-xl
+            +e.column_left._pd40
+              +nd-section-content
+                +nd-section-title._fz22 Your invitation was succesfully sent
+                +e.text_mt._fz18
+                  p After Manager accepts your invitation he will appear in your <a href="host-account-managers.html">manager list.</a>
+              +nd-section-content
+                +e.text_fz18
+                  p In order to assign manager to any of your space please go to
+                  p
+                    b Your account - Spaces - Manage Space - Manager
+            +e.column_right._right_w580
+              +e.FIGURE.figure
+                +e.IMG.figure-image(src="assets/images/nd/il-envelope.svg")
+
+
 block panels
 
 block popups
