--- a/app/blocks/note/nd-note.scss
+++ b/app/blocks/note/nd-note.scss
@@ -4,4 +4,45 @@
   display: block;
   width: 100%;
 
+  &__icon {
+    @include rule(width, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
+    @include rule(height, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
+
+    img {
+      display: block;
+      font-size: 0;
+      line-height: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__text {
+    display: block;
+    width: 100%;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: (26 / 18);
+
+    @include screen('xlg', max, 2) {
+      font-size: pxtovw(18, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(18, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(18, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(15, 375);
+      line-height: (18 / 15);
+    }
+
+    &:not(:first-child) {
+      @include rule(margin-top, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
+    }
+  }
 }
