--- a/app/pages/host-account/host-account-managers-invite.pug
+++ b/app/pages/host-account/host-account-managers-invite.pug
@@ -38,8 +38,30 @@ block content
               +nd-button('a')._pad10._h35.__add.is-disabled(href="host-account-managers-invite.html") Add manager
 
           +e.board
-            +e.column._divider
-            +e.column
+            +e.column_left._pb._divider
+              +nd-form.__form
+                +form-section-title._fz22._fw400 Sign up new manager
+                +form-section-text._mt44._indent
+                  p Your space manager don’t have an account on Spacepool yet? Invite him to create space manager account.
+                  p Send him invitation link:
+                +form-section-wrapper._mt
+                  +nd-form-box('Invitation link')._bg-white
+                    +nd-input(type="text" name="link" placeholder="Invitation link" readonly data-copy-target="inviteLink" value="spacepool.com/signupmanager/153458593")._copy
+                    +nd-button('button')._pad10._h35.__copy.js-copy(type="button" data-copy-from="inviteLink") Copy link
+              +nd-note({image: {src: 'assets/images/nd/nd-info.svg'}, text: true}).__note After registration the manager will appear in your manager list and you will be able to add him as a Space manager.
+            +e.column_right._pb
+              +nd-form.__form(data-validated-form)
+                +form-section-title._fz22._fw400 Invite from existing account
+                +form-section-text._mt44._indent
+                  p Your space manager has a Spacepool account? You can invite him to become your manager.
+                  p Send him invitation using his registration account Email:
+                +form-section-wrapper._mt
+                  +nd-form-box('Invited account email')._bg-white
+                    +nd-input(type="email" name="email" placeholder="Invited account email" required)
+                +e.buttons_mt24
+                  +nd-button('button', true).__button_wide(type="submit") Invite manager
+              +nd-note({image: {src: 'assets/images/nd/nd-info.svg'}, text: true}).__note After registration the manager will appear in your manager list and you will be able to add him as a Space manager.
+
 
 block panels
 
